# polymarket-ai-trading

./: .deploy_trigger  .dockerignore  .gitignore  BACKTEST_REALITY.md  DEPLOYMENT.md  DOCKER_GUIDE.md  Dockerfile  MULTI_MODEL_SUMMARY.md  PI_COMPLETE_GUIDE.md  PROJECT_STRUCTURE.md  README.md  RENDER_DEPLOY.md  RENDER_QUICKSTART.md  REPO_UPDATE_SUMMARY.md  START_GUIDE.md  VERCEL_DEPLOY.md  WALLET_SETUP.md  docker-compose.yml  render.yaml
agents/: systematic_trader.py
api/: dashboard_api.py
config/: active_aggressive.yaml  active_conservative.yaml  active_moderate.yaml  models.yaml  parameter_tests.yaml  trader.yaml  trading.yaml
docs/: README.md
docs/archive/: BACKTEST_IMPLEMENTATION.md  BACKTEST_VERIFICATION.md  CLEANUP_SUMMARY_2026-01-28.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY_V2.md  LESSONS_FROM_SMART_APE.md  SCIEMO_DESIGN_ANALYSIS.md
docs/deployment/: polymarket-api.md  render.md
docs/guides/: backtesting.md  go-live.md  paper-trading.md
research/: berg-rietz-2018-longshots-overconfidence.md  munger-25-biases.md  political_betting_guide.md  polymarket_data_research.md  polymarket_ecosystem.md  polymarket_key_findings.md  polymarket_markets.json  polymarket_opportunities.md  quant_mean_reversion_guide.md
research/papers/: pizzint-analysis.md  theme1-prediction-market-accuracy.md  theme2-biases-inplay-betting.md  theme3-governance-internal-control.md  theme4-ai-forecasting.md  theme5-corruption-procurement.md  theme6-general-references.md
scripts/: backtest_real_markets.py  debug_markets.py  demo_backtest.py  deploy-docker.sh  deploy_vercel.sh  docker.sh  emergency_stop.py  find_testable_markets.py  init_databases.py  install_docker.sh  monitor_models.py  run_24_7.sh  start_all.sh  start_docker.sh  start_models.py  stop_all.sh  stop_models.py  systematic-trader.service  test_historical_data.py
tests/integration/: test_end_to_end.py
toolkit/: README.md
toolkit/execution-engine/: README.md  pyproject.toml
toolkit/execution-engine/src/execution_engine/: __init__.py  backtester.py  data_recorder.py  executor.py  models.py  orchestrator.py  paper_trader.py  parameter_sweep.py  position_sizer.py  risk_manager.py  signal_aggregator.py  trade_logger.py
toolkit/execution-engine/tests/: test_executor.py  test_position_sizer.py  test_risk_manager.py
toolkit/execution-engine/tests/fixtures/: mock_data.json
toolkit/mean-reversion/: README.md  pyproject.toml
toolkit/mean-reversion/src/mean_reversion/: __init__.py  cli.py  config.py  generator.py  models.py
toolkit/polymarket-data/: README.md  pyproject.toml
toolkit/polymarket-data/examples/: find_volatile_markets.py
toolkit/polymarket-data/src/polymarket_data/: __init__.py  cli.py  client.py  models.py  rate_limiter.py
toolkit/volatility-alerts/: README.md  pyproject.toml
toolkit/volatility-alerts/src/volatility_alerts/: __init__.py  cli.py  config.py  handlers.py  models.py  monitor.py
toolkit/whale-tracker/: README.md  pyproject.toml
toolkit/whale-tracker/src/whale_tracker/: __init__.py  cli.py  config.py  models.py  monitor.py
vercel-frontend/: index.html  vercel.json
vercel-frontend/public/: _env.js  about.html  ai-insights.html  index.html  markets.html  quality.html  research.html  resolution.html  results.html  signals.html  style.css  system.html  theory.html
