[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mean-reversion"
version = "0.1.0"
description = "Mean reversion trading signals for prediction markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aztec Analysis"}
]
keywords = ["polymarket", "trading", "signals", "mean-reversion"]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
backtest = [
    "pandas>=2.0.0",
]

[project.scripts]
mean-reversion = "mean_reversion.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
