[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-data"
version = "0.1.0"
description = "Read-only Polymarket data fetcher - no auth required"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aztec Analysis"}
]
keywords = ["polymarket", "prediction-markets", "trading", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
polymarket = "polymarket_data.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/aztec-analysis"
Repository = "https://github.com/yourusername/aztec-analysis/tree/main/toolkit/polymarket-data"

[tool.setuptools.packages.find]
where = ["src"]
