[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-alerts"
version = "0.1.0"
description = "Real-time price movement detection for Polymarket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aztec Analysis"}
]
keywords = ["polymarket", "alerts", "volatility", "trading"]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
webhook = [
    "aiohttp>=3.9.0",
]

[project.scripts]
volatility-alert = "volatility_alerts.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
