[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whale-tracker"
version = "0.1.0"
description = "Monitor large trades and smart money on Polymarket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aztec Analysis"}
]
keywords = ["polymarket", "whales", "trading", "monitoring"]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
dune = [
    "dune-client>=1.0.0",
]

[project.scripts]
whale-tracker = "whale_tracker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
